# clawthon-openclaw-project

./: .gitignore  README.md  pyproject.toml
clawthon_openclaw/: __init__.py  __main__.py  audit.py  audit_writer.py  cli.py  client.py  delivery.py  feishu.py  persona.py  profile_mapper.py  remaining_workflows.py  runtime_env.py  settings.py  submission_workflow.py  sync.py  timeline.py  transport.py  workflows.py
config/: openclaw.env.example
docs/: leader-submission-handoff.md  openclaw-autonomous-usage.md  openclaw-foundation.md  openclaw-github-collaboration.md  openclaw-live-usage.md  openclaw-production-run-log.md
docs/plans/: 2026-04-23-clawthon-openclaw-plan.md  2026-04-23-openclaw-remaining-work-table.md
skills/wecreate-hackathon-participant/: SKILL.md
skills/wecreate-hackathon-participant/agents/: openai.yaml
skills/wecreate-hackathon-participant/references/: participant-api-workflow.md
skills/wecreate-hackathon-participant/scripts/: wecreate_submission_api.py
submission/: wecreate-draft-payload.json
tests/: test_audit.py  test_audit_writer.py  test_cli.py  test_client.py  test_delivery.py  test_feishu.py  test_persona.py  test_profile_mapper.py  test_remaining_workflows.py  test_runtime_env.py  test_settings.py  test_submission_workflow.py  test_sync.py  test_timeline.py  test_transport.py  test_transport_errors.py  test_workflows.py
